--- a/modulos/creaCFDI/css/style.css
+++ b/modulos/creaCFDI/css/style.css
@@ -14,3 +14,30 @@ border-color: #ddd;
 border-radius: 4px 4px 0 0;
 box-shadow: none;
 }
+
+/*******************************************/
+.list-group-item{
+	cursor: pointer !important;
+}
+
+.btn{
+	border-radius: 0px !important;
+}
+
+.form-control{
+	border-radius: 0px !important;	
+}
+
+.list-group{
+	border-radius: 0px !important;		
+}
+
+.panel{
+	border-radius: 0px !important;		
+
+}
+.panel-heading {
+  border-top-right-radius: 0px !important;
+  border-top-left-radius: 0px !important;
+}
+/**********************************************/
